--- a/DOM/main.scss
+++ b/DOM/main.scss
@@ -1,11 +1,40 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+   font-family: Arial, Helvetica, sans-serif;
 }
 
-.modal_container{
-    display: none;
+.modalContainer{
+    //display: none;
+}
+
+body{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    margin: 0;
+}
+
+.open{
+    background-color: aquamarine;
+    border-color: aquamarine;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 16px;
+}
+
+.modalContainer{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-200%);
+    text-align: center;
+    opacity: 0;
+}
+
+.modalContainer.show{
+    opacity: 1;
 }
 
