--- a/JS_practice/main.css
+++ b/JS_practice/main.css
@@ -1,17 +1,19 @@
-body {
-  margin: 0;
+body{
+  margin:0
 }
 
-.list {
+.list{
   display: flex;
   text-decoration: underline;
+  letter-spacing: 10px;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 300;
   font-size: 18px;
-}
-.list p {
-  border: 1px solid black;
-  width: 15%;
-  padding: 5px;
-  text-align: center;
+
+  p{
+      border: 1px solid black;
+      width: 15%;
+      padding: 5px;
+      text-align: center;
+  }
 }
