--- a/Project_2/styles/main.scss
+++ b/Project_2/styles/main.scss
@@ -429,3 +429,85 @@ body, .page_wrapper{
 .slick-next{
     right: -60px;
 }
+
+.gallery_container{
+    width: 100%;
+}
+
+.gallery_content{
+    width: 100%;
+    margin: 0 auto;
+    max-width: 1170px;
+    padding: 140px 0;
+}
+
+.gallery_line{
+    width: 100%;
+    max-width: 100px;
+    display: block;
+    border: 1px solid #2C4058;
+    margin: 0 auto;
+    margin-bottom: 30px;
+}
+
+.gallery_title{
+    text-transform: uppercase;
+    font-family: 'Montserrat';
+    font-size: 44px;
+    font-weight: 700;
+    color: #2C4058;
+    text-align: center;
+    margin-bottom: 89px;
+}
+
+ #my-gallery{
+    display: grid;
+    grid-template-columns: repeat(4, 285px);
+    grid-template-rows: repeat(2, 214px);
+    gap: 10px;
+    margin-bottom: 60px;
+}
+
+.building{
+    width: 580px
+}
+
+.building2, .building3 .building4, .building5{
+    width: 285px;
+}
+
+.grid_item1{
+    grid-column: 1/3;
+    grid-row: 1/2;
+}
+
+.grid_item2{
+    grid-column: 3/4;
+    grid-row: 1/2;
+}
+
+.grid_item3{
+    grid-column: 4/4;
+    grid-row: 1/2;
+}
+
+.grid_item4{
+    grid-column: 3/4;
+    grid-row: 2/2;
+}
+
+.grid_item5{
+    grid-column: 4/4;
+    grid-row: 2/2;
+}
+
+.gallery_button{
+    display: block;
+    margin: 0 auto;
+    text-transform: uppercase;
+    border: 1px solid #2C4058;
+    color: black;
+    padding: 17px 57px;
+    background-color: transparent;
+    cursor: pointer;
+}
