--- a/Project_2/styles/main.scss
+++ b/Project_2/styles/main.scss
@@ -161,6 +161,8 @@ body,
     //opacity: 0.7;
     width: 100%;
     height: 100%;
+    max-width: 1600px;
+    max-height: 800px;
 }
 
 .center_section,
