--- a/Project_2/styles/main.scss
+++ b/Project_2/styles/main.scss
@@ -495,6 +495,19 @@ body,
     margin-top: 30px;
 }
 
+.slick-dots li button:before{
+    color: transparent;
+    border: 1px solid white;
+    border-radius: 50%;
+    width: 10px;
+    height: 10px;
+    margin-right: 40px;
+}
+
+.slick-dots li.slick-active button:before{
+    color: transparent;
+}
+
 .gallery_container {
     width: 100%;
 }
